2008-10-20  Dan Winship  <danw@gnome.org>

	* tests/Makefile.am (INCLUDES): add SOUP_MAINTAINER_FLAGS here
	too.

	* tests/dns.c (main):
	* tests/getbug.c (main):
	* tests/server-auth-test.c (do_test): replace deprecated glib
	functions

2008-10-20  Cosimo Cecchi  <cosimoc@gnome.org>

	* configure.in:
	* libsoup/Makefile.am:
	* libsoup/soup-status.h:
	* libsoup/soup-types.h:
	* libsoup/soup-uri.c: (soup_uri_to_string):
	Build with G_DISABLE_DEPRECATED and G_DISABLE_SINGLE_INCLUDES; enforce
	the first switch under maintainer mode and the second one
	unconditionally (#557072).

2008-10-19  Dan Winship  <danw@gnome.org>

	* libsoup/soup-auth.c (soup_auth_update): compare scheme name
	case-insensitively, to prevent an infinite loop when it's not in
	standard form. #536285

2008-10-10  Dan Winship  <danw@gnome.org>

	* libsoup/soup-message-headers.c
	(soup_message_headers_get_ranges): if the caller passed the
	total_length of the message body, then sort sort the ranges and
	merge overlapping ones to generate a minimal set.

	* tests/range-test.c: test it

2008-10-09  Andrew W. Nosenko  <andrew.w.nosenko@gmail.com>

	* libsoup/soup-uri.c (soup_uri_to_string): Verify whether uri is
	non-NULL and avoid crash on NULL pointer dereference therefore.

2008-10-03  Dan Winship  <danw@gnome.org>

	* libsoup/soup-connection.c: Change the SoupURI properties to
	SoupAddress properties.

	* libsoup/soup-address.c (soup_address_resolve_async)
	(soup_address_resolve_sync): Redo slightly so that multiple
	simultaneous attempts to resolve the same address won't cause
	problems.
	(soup_address_hash_by_name, soup_address_equal_by_name):
	(soup_address_hash_by_ip, soup_address_equal_by_ip): methods to
	hash addresses by name or IP address

	* libsoup/soup-message.c (soup_message_get_address): gets a
	SoupAddress corresponding to the message's URI

	* libsoup/soup-auth-manager.c (SoupAuthHost): hash hosts by
	soup_address_hash_by_name() rather than by URI.
